--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Glassmorphism Login</title>
+  <title>Portale Investitori</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
