--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Portale Investitori</title>
-  <link rel="icon" type="image/x-icon" href="0. Value-Focused Investments - Logo.jpg">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
